# tg-volley-bot-lca

./: .env.example  README.md  dev_requirements.txt  lambda_function.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml  publish.yaml
app/: __init__.py  __main__.py  bot.py  main.py  settings.py
app/gateways/: openai.py  translator.py
app/handlers/: about_handler.py  help.py
app/handlers/actions/: action_handler.py  ask_ai_handler.py  exceptions.py  translate.py
app/misc/: translator.py
app/models/openai/: record.py  response.py
data/: basic.data  bvlarnaca.json
tests/: __main__.py  conftest.py  helpers.py  test_about.py  test_ask_openai.py  test_dont_translate_from_en_msg.py  test_dont_translate_from_native_msg.py  test_help.py  test_start.py  test_translate_from_ukr_msg.py  test_translate_msg.py  test_wrong_command.py
